# flame_training

./: README.md  pyproject.toml  requirements.txt  setup.py
scripts/: download_assets.sh
src/counterpart/: cli.py  config.py  detect.py  export.py  face_detection.py  frankmocap.py  landmark.py  ringnet.py  texture.py
tests/: test_export.py  test_face_detection.py  test_frankmocap.py  test_integration.py  test_landmark_fusion.py  test_ringnet.py  test_texture.py
tests/fixtures/: face_landmarks.npy
viewer/: README.md  index.html
